# mssql_mcp_server

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/azuresql_mcp_server/: server.py
src/dynamicscrm_mcp_server/: server.py
src/mssql_mcp_server/: server.py
src/slack_mcp_server/: server.py
tests/: conftest.py  test_server.py
