[project]
name = "mssql_mcp_server"
version = "0.1.1"
description = "A Model Context Protocol (MCP) server that enables secure interaction with MSSQL databases. This server allows AI assistants to list tables, read data, and execute SQL queries through a controlled interface, making database exploration and analysis safer and more structured."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.0.0",
    "pyodbc>=5.2.0",
]
[[project.authors]]
name = "Jexin Sam"
email = "jexin.sam@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mssql_mcp_server = "mssql_mcp_server:main"
